# chordparser

./: .gitignore  Cargo.toml  README.md  log.txt  my_chord.mid  test.mid
.github/workflows/: build_and_test.yml  rust.yml
benches/: bench_infere.rs  bench_parser.rs
examples/: parse-chord.rs
midi_files/: Abmaj7#11.mid
src/: lexer.rs  lib.rs  parser.rs  parser_error.rs  printer.rs  token.rs  transformer.rs  validator.rs
src/chord/: c_quality.rs  chord_ir.rs  interval.rs  intervals.rs  mod.rs  normalize.rs  note.rs  quality.rs  render.rs  semantics.rs
src/inference/: mod.rs  normalize.rs  tables.rs
src/midi/: mod.rs
src/new_parser/: ast.rs  expression.rs  expressions.rs  mod.rs  parser.rs
src/parsing/: ast.rs  chord_quality.rs  evaluator.rs  expression.rs  expressions.rs  lexer.rs  mod.rs  normalize.rs  parser.rs  parser_error.rs  token.rs  validator.rs
src/voicings/: mod.rs
tests/: exhaustive.rs  parser_tests.rs  should_error.rs  should_normalize_name.rs  should_parse.rs  should_parse_quality.rs
