[package]
name = "chordparser"
version = "1.1.1"
edition = "2021"
description = "A parser library to generate Jazz/Pop/Rock chords from string inputs"
repository = "https://github.com/PauSala/chordparser"
license = "MIT"
keywords = ["music", "music-theory", "chords", "midi", "parser"]
categories = ["multimedia::audio", "parsing"]
exclude = [".DS_Store"]

[dependencies]
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"

[dev-dependencies]
test-case = "3.3.1"
midly = { version = "0.5.3"}

[[example]]
name = "parse-chord"
path = "examples/parse-chord.rs"




