[package]
name = "chordparser"
version = "2.1.8"
edition = "2024"
description = "A parser library to generate Jazz/Pop/Rock chords from string inputs"
repository = "https://github.com/PauSala/chordparser"
license = "MIT"
keywords = ["music", "music-theory", "chords", "midi", "parser"]
categories = ["multimedia::audio", "parsing"]
exclude = [".DS_Store"]

[dependencies]
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"

[dev-dependencies]
test-case = "3.3.1"
midly = { version = "0.5.3"}
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "parse-chord"
path = "examples/parse-chord.rs"

[[bench]]
name = "bench_parser"
harness = false


[profile.release]
opt-level = 3
lto = true 
codegen-units = 1 


